--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cv",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://edgaramirbkian.github.io/cv/",
+  "homepage": "http://edgaramirbkian.github.io/cv",
   "dependencies": {
     "bootstrap": "4.3.1",
     "node-sass": "^4.12.0",
